--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,12 +1,17 @@
-<h2>Welcome to the Question && Answer Board</h2>
+<h3 class="center">Welcome to the Question && Answer Board</h3>
+<div class="divider"></div>
+<br>
 
-<p>
-  Submit your questions below, click on a question to see the answers people have responded with.
-</p>
+<h5 class="center">Click on questions to see more or add a new post below</h5>
+
+<div class="divider"></div>
+<br>
 
 
-<ul>
-  {{#each model as |post|}}
-    <li>{{post.author}}{{post.question}}{{post.notes}}</li>
-  {{/each}}
-</ul>
+<div class="row myrow">
+  <div class="two columns">
+    {{#each model as |post|}}
+      <li>{{post.author}}{{post.question}}</li>
+    {{/each}}
+  </div>
+</div>
