--- a/app/templates/post.hbs
+++ b/app/templates/post.hbs
@@ -1,1 +1,24 @@
-{{outlet}}
+<h2>More information about {{post.author}}'s post about: {{post.question}} </h2>
+
+<h3>{{post.notes}}</h3>
+
+{{update-post post=model update="update"}}
+
+{{post-detail post=model destroyPost="destroyPost"}}
+
+
+
+<!-- <div class="container">
+  <h4>{{model.author}} asked:</h4>
+  <p>{{model.question}}</p>
+  <p>{{model.notes}}</p>
+</div>
+
+{{new-answer question=model save="saveAnswer"}}
+
+
+<ul>
+  {{#each model.answers as |answer|}}
+    <li>{{answer.text}} -{{answer.author}}</li>
+  {{/each}}
+</ul> -->
