Added answer form just need to link save button

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -5,16 +5,26 @@
 <h5 class="center">Click on questions to see more or add a new post below</h5>
 
 <div class="divider"></div>
-<br>
 
 
-<div class="row myrow">
-  <div class="two columns">
-    {{#each model as |post|}}
-       {{post-tile post=post}}
-       {{#link-to 'post' post.id}} {{post.question}}{{/link-to}}
-    {{/each}}
+
+<div class="row">
+  <div class="col m12">
+    <div class="card blue-grey lighten-2">
+      <div class="card-content white-text">
+        {{#each model as |post|}}
+           {{post-tile post=post}}
+           {{#link-to 'post' post.id}} {{post.question}}{{/link-to}}
+           <div class="divider"></div>
+        {{/each}}
+      </div>
+      <div class="card-action">
+      </div>
+    </div>
   </div>
 </div>
+
+
+
 
 {{new-post addPost="addPost"}}
