--- a/app/templates/components/post-detail.hbs
+++ b/app/templates/components/post-detail.hbs
@@ -1,8 +1,36 @@
-Author: {{post.author}}
+<!-- Author: {{post.author}}
 <br>
-{{post.question}}
+Question: {{post.question}}
 <br>
-{{post.notes}}
+Notes: {{post.notes}}
+<br>
+
+<button {{action 'delete' post}}>Delete</button> -->
 
 
-<button {{action 'delete' post}}>Delete</button>
+<div class="row">
+  <div class="col m12">
+    <div class="card blue-grey darken-1">
+      <div class="card-content white-text">
+        <span class="card-title">{{post.author}}</span>
+        <h4>{{post.question}}</h4>
+        <p>{{post.notes}}</p>
+      </div>
+      <div class="divider"></div>
+      <div >
+        <ul>
+          {{#each model.answers as |answer|}}
+            <li>{{answer.author}} {{answer.answer}}</li>
+          {{/each}}
+        </ul>
+
+      </div>
+      <div class="card-action">
+        <button {{action 'delete' post}}>Delete</button>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="divider"></div>
+
+{{answer-tile post=model save="save"}}
