Implented a helper with cost that works and a service topPosts that is not working

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -13,8 +13,8 @@
     <div class="card blue-grey lighten-2">
       <div class="card-content white-text">
         {{#each model as |post|}}
-           {{post-tile post=post save2="save3"}}
-           {{#link-to 'post' post.id}} {{post.question}}{{/link-to}}
+           {{post-tile post=post save2="save3"}} {{post-cost post}}
+        {{#link-to 'post' post.id}} {{post.question}}{{/link-to}}
            <div class="divider"></div>
         {{/each}}
       </div>
