--- a/app/templates/components/new-post.hbs
+++ b/app/templates/components/new-post.hbs
@@ -17,6 +17,11 @@
       {{input value=notes id="notes"}}
     </div>
 
+    <div class="form-group">
+      <label for="cost">Cost:</label>
+      {{input value=cost id="cost"}}
+    </div>
+
     <button {{action 'addPost'}}>Save</button>
   </form>
 </div>
