--- a/app/templates/components/post-tile.hbs
+++ b/app/templates/components/post-tile.hbs
@@ -1,4 +1,2 @@
-  Author: {{post.author}}
+ {{post.author}}{{fullInfo}}
   <br>
-
-<button {{action ‘addToTopPosts’ product}}>Add to top posts</button>
