Broccili Error on post-tile

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -5,7 +5,7 @@
           <a href="#!" class="brand-logo center thin">Inquiry</a>
           <ul class="right hide-on-med-and-down thin">
             <li>{{#link-to 'index'}}HOME{{/link-to}}</li>
-            <li>{{#link-to 'topposts'}}Top Posts{{/link-to}}</li>
+            <li>{{#link-to 'favorites'}}FAVS{{/link-to}}</li>
           </ul>
         </div>
       </nav>
