--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -20,6 +20,11 @@
       </div>
       <div class="card-action">
       </div>
+      <div class="container">
+  <div class="favorited">
+    <h1>Favorited Questions</h1>
+    {{display-favorites answer="answer" post=post}}
+  </div>
     </div>
   </div>
 </div>
