fixed errors project is now working

--- a/app/templates/components/post-tile.hbs
+++ b/app/templates/components/post-tile.hbs
@@ -1,2 +1,2 @@
- {{fullInfo}} <button {{action ‘addToFavs’ post}}>Favs</button>
+ {{fullInfo}} <button {{action 'addToFavs' post}}>Favs</button>
   <br>
