--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -25,6 +25,7 @@
     <h1>Favorited Questions</h1>
     {{display-favorites answer="answer" post=post}}
   </div>
+      </div>
     </div>
   </div>
 </div>
